--- a/Sección 31 Node JS Express Sequelize Pug/package.json
+++ b/Sección 31 Node JS Express Sequelize Pug/package.json
@@ -4,7 +4,8 @@
   "description": "Aprendiendo NodeJS Express y Sequelize ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server"
+    "dev": "nodemon server",
+    "start": "node server"
   },
   "author": "Cristian David Cuartas Hernández",
   "license": "ISC",
@@ -15,5 +16,8 @@
     "nodemon": "^1.19.1",
     "pug": "^2.0.4",
     "sequelize": "^5.9.1"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
